Fix alignment of ascent-type on dryrun sidefects popup.

--- a/src/app/activity/forms/activity-form/dry-run-activity-dialog/dry-run-activity-dialog.component.scss
+++ b/src/app/activity/forms/activity-form/dry-run-activity-dialog/dry-run-activity-dialog.component.scss
@@ -44,3 +44,7 @@ table {
     }
   }
 }
+
+app-ascent-type {
+  display: inline-block;
+}
